<resources>
    <string name="app_name">Supermarket</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="all">All</string>
    <string name="dont_you_have_an_account">Don\'t you have an account?</string>
    <string name="email">email</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="and_your_email">And your email?</string>
    <string name="now_create_a_password">Now, create a password</string>
    <string name="sign_up">Sign up</string>
    <string name="whats_your_name">Whats your name?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_a_link_to_reset_your_password">We will send you a link to reset your password</string>
    <string name="send_reset_instructions">Send Reset Instructions</string>
    <string name="invalid_email_or_password">Ops! Invalid email or password</string>
    <string name="logging_in">Logging in</string>
    <string name="sending_reset_instructions">Sending reset instructions</string>
    <string name="the_email_should_arrive_within_a_few_minutes">The email should arrive within a few minutes</string>
    <string name="invalid_email">Ops! Invalid email</string>
    <string name="your_full_name">your full name</string>
    <string name="signing_up">Signing up</string>
    <string name="log_in_using_your_social_network_account">Log in using your social network account</string>
    <string name="or_sign_up_using_your_social_network_account">Or sign up using your social network account</string>
    <string name="icon_error"></string>
    <string name="icon_success"></string>
    <string name="icon_cart"></string>
    <string name="start_shopping">Start shopping</string>
    <string name="checkout">Checkout</string>
    <string name="cart">Cart</string>
    <string name="could_not_add_item_to_cart">Could not add item to cart</string>
    <string name="item_added_to_cart">Item added to cart</string>
    <string name="could_not_sign_in_please_try_again">Could not log in. Please, try again</string>
    <string name="an_ecommerce_mobile_demo_for_wedeploy">An ecommerce mobile demo for WeDeploy</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="the_items_you_add_to_the_cart_will_show_up_here">The items you add to the cart will show up here</string>
    <string name="supermarket">Supermarket</string>
    <string name="icon_arrow"></string>
    <string name="icon_facebook"></string>
    <string name="icon_google"></string>
    <string name="log_out">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="could_not_delete_product_from_cart">Could not delete product from cart</string>

    <string-array name="filter">
        <item>@string/all</item>
        <item>Bakery</item>
        <item>Dairy</item>
        <item>Fruit</item>
        <item>Vegetable</item>
        <item>Meat</item>
    </string-array>
</resources>
