<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="io.wedeploy.supermarket.view.binding.Font" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/log_in_using_your_social_network_account"
            android:textAlignment="center"
            android:textColor="@color/text_light"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/facebookSignIn"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:text="@string/icon_facebook"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:backgroundTint="@color/social_facebook_button_background"
            app:font="@{Font.ICONS_16}"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/googleSignIn"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_goneMarginTop="0dp" />

        <Button
            android:id="@+id/googleSignIn"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="0dp"
            android:text="@string/icon_google"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:backgroundTint="@color/social_google_button_background"
            app:font="@{Font.ICONS_16}"
            app:layout_constraintLeft_toRightOf="@+id/facebookSignIn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/facebookSignIn" />
    </android.support.constraint.ConstraintLayout>
</layout>