<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textAlignment="center"
            android:textAppearance="@style/WeTextAppearance.Large"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintLeft_toLeftOf="@+id/guideline6"
            app:layout_constraintRight_toLeftOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/we_will_send_you_a_link_to_reset_your_password"
            android:textAlignment="center"
            android:textAppearance="@style/WeTextAppearance.Medium"
            android:textColor="@color/text_light2"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline6"
            app:layout_constraintRight_toLeftOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/resetPasswordButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline6"
            app:layout_constraintRight_toLeftOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="0dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp"
            tools:layout_editor_absoluteX="391dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/resetPasswordButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="12dp"
            android:text="@string/send_reset_instructions"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/guideline6"
            app:layout_constraintRight_toLeftOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/editText" />
    </android.support.constraint.ConstraintLayout>
</layout>