<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="io.wedeploy.supermarket.view.binding.Font" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:navigationIcon="@drawable/ic_close"
                app:title="@string/cart"
                app:titleTextColor="@color/title_color" />
        </android.support.design.widget.AppBarLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/emptyView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/appBar"
            app:layout_constraintTop_toBottomOf="@+id/appBar">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/we_rounded_background"
                android:elevation="8dp"
                android:gravity="center"
                android:text="@string/icon_cart"
                android:textColor="@color/cart_icon_color"
                android:textSize="36sp"
                app:font="@{Font.ICONS_12}"
                app:layout_constraintBottom_toTopOf="@+id/textView8"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.39"
                app:layout_constraintVertical_chainStyle="packed"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/textView8"
                style="@style/WeTextAppearance.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:gravity="center_horizontal"
                android:text="@string/your_cart_is_empty"
                android:textColor="@color/title_color"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/textView9"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView9"
                style="@style/WeTextAppearance.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/the_items_you_add_to_the_cart_will_show_up_here"
                android:textColor="@color/h2_color"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />
        </android.support.constraint.ConstraintLayout>

        <ProgressBar
            android:id="@+id/loading"
            style="@style/WeLoading"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBar" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/cartList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingTop="8dp"
            android:visibility="invisible"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBar" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="Checkout" />
    </android.support.constraint.ConstraintLayout>
</layout>