<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            style="@style/WeTextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/sign_up"
            android:textColor="@color/sign_up_title_color"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/steps"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32"
            app:layout_constraintVertical_chainStyle="packed" />

        <io.wedeploy.supermarket.view.StepLayout
            android:id="@+id/steps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:doneButtonText="@string/sign_up"
            app:layout_constraintBottom_toTopOf="@+id/logInButton"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
            app:layout_constraintRight_toLeftOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/WeTextAppearance.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="27dp"
                    android:gravity="center_horizontal"
                    android:text="@string/whats_your_name"
                    android:textColor="@color/sign_up_title_color"
                    android:textSize="26dp"
                    tools:text="@string/whats_your_name" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/WeTextAppearance.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="27dp"
                    android:gravity="center_horizontal"
                    android:text="@string/and_your_email"
                    android:textColor="@color/sign_up_title_color"
                    android:textSize="26dp"
                    tools:text="@string/and_your_email" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/WeTextAppearance.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="27dp"
                    android:gravity="center_horizontal"
                    android:text="@string/now_create_a_password"
                    android:textColor="@color/sign_up_title_color"
                    android:textSize="26dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </io.wedeploy.supermarket.view.StepLayout>

        <TextView
            android:id="@+id/logInButton"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/text_button_background"
            android:gravity="center"
            android:text="@string/already_have_an_account_log_in"
            android:textColor="@color/text_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />
    </android.support.constraint.ConstraintLayout>
</layout>